snowchains_core/tests/snapshots/atcoder_retrieve_test_cases__arc019_samples_messages.snap
---
source: snowchains_core/tests/atcoder-retrieve-test-cases.rs
expression: messages
---
[
    OnRequest(
        GET,
        "https://atcoder.jp/contests/arc019/tasks",
    ),
    OnResponse(
        200,
        Ok,
    ),
    OnRequest(
        GET,
        "https://atcoder.jp/contests/arc019/tasks_print",
    ),
    OnResponse(
        200,
        Unknown,
    ),
    Warn(
        "D: Could not extract the sample cases",
    ),
]
