snowchains_core/tests/snapshots/atcoder_retrieve_test_cases__practice_samples_messages.snap
---
source: snowchains_core/tests/atcoder-retrieve-test-cases.rs
expression: messages
---
[
    OnRequest(
        GET,
        "https://atcoder.jp/contests/practice/tasks",
    ),
    OnResponse(
        404,
        Warn,
    ),
    OnRequest(
        GET,
        "https://atcoder.jp/contests/practice",
    ),
    OnResponse(
        200,
        Ok,
    ),
    OnRequest(
        GET,
        "https://atcoder.jp/login",
    ),
    OnResponse(
        200,
        Ok,
    ),
    OnRequest(
        POST,
        "https://atcoder.jp/login",
    ),
    OnResponse(
        302,
        Ok,
    ),
    OnRequest(
        GET,
        "https://atcoder.jp/settings",
    ),
    OnResponse(
        200,
        Ok,
    ),
    OnRequest(
        GET,
        "https://atcoder.jp/contests/practice",
    ),
    OnResponse(
        200,
        Ok,
    ),
    OnRequest(
        GET,
        "https://atcoder.jp/contests/practice/tasks",
    ),
    OnResponse(
        200,
        Ok,
    ),
    OnRequest(
        GET,
        "https://atcoder.jp/contests/practice/tasks_print",
    ),
    OnResponse(
        200,
        Ok,
    ),
]
